package _2_结构型模式._1_适配器模式_Adapter._2_对象适配器;

public interface Voltage5V {
    int output5V();
}
